# GitBlend

./: README.md  install.sh  pyproject.toml  setup.py  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: check_test.yml  ci_entrypoint.yml  test_installer.yml
gitblend/: cli.py  config.py  utils.py
gitblend/commands/: create_tag.py  delete_tag.py  list_tags.py  rename_tag.py  self_update.py  setup.py  update_all.py  version.py
gitblend/commands/branches/: entrypoints.py  show_branches.py
gitblend/commands/commits/: create.py  entrypoints.py  revert.py
gitblend/commands/remote_management/: entrypoints.py  set_remote_url.py  show_remotes.py
gitblend/commands/tags/: create.py  delete.py  delete_tag.py  entrypoints.py  list.py  rename.py  rename_tag.py
tests/: test_cli.py  test_config.py  test_update_all.py  test_utils.py
tests/commands/: test_create_tag.py  test_delete_tag.py  test_list_tags.py  test_rename_tag.py  test_self_update.py  test_setup.py  test_update_all.py  test_version.py
tests/commands/branches/: test_branches_entrypoints.py  test_show_branches.py
tests/commands/commits/: test_commits_entrypoints.py  test_create_commit.py  test_revert.py
tests/commands/remote_management/: test_entrypoints.py  test_set_remote_url.py  test_show_remotes.py
tests/commands/tags/: test_create_tag.py  test_delete_tag.py  test_list_tags.py  test_rename_tag.py
