[tool.poetry]
name = "gitblend"
version = "0.1.0"
description = "A Git utility tool combining git and gh commands"
authors = ["Mikel Sanchez"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.scripts]
gitblend = "gitblend.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
