[tool.poetry]
name = "gitblend"
version = "0.1.0"
description = "A Git utility tool combining git and gh commands"
authors = ["Mikel Sanchez"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
gitpython = "^3.1.44"
toml = "^0.10.2"

[tool.poetry.scripts]
gitblend = "gitblend.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.10"
black = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
