[tool.poetry]
name = "gitblend"
version = "0.1.0"
description = "A Git utility tool combining git and gh commands"
authors = ["Mikel Sanchez"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
toml = "^0.10.2"
pytest-cov = "^6.1.1"

[tool.poetry.scripts]
gitblend = "gitblend.cli:main"
gib = "gitblend.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.10"
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
